--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <groupId>http.async.client</groupId>
   <artifactId>http.async.client</artifactId>
   <packaging>jar</packaging>
-  <version>1.3.1-4-0xa7f1</version>
+  <version>1.3.1-5-0xc122</version>
   <name>http.async.client</name>
   <description>Asynchronous HTTP Client for Clojure</description>
   <url>https://github.com/cch1/http.async.client</url>
@@ -19,7 +19,7 @@
     <url>https://github.com/cch1/http.async.client</url>
     <connection>scm:git:git://github.com/cch1/http.async.client.git</connection>
     <developerConnection>scm:git:ssh://git@github.com/cch1/http.async.client.git</developerConnection>
-    <tag>a7f10f2f93601e5b3cacf0957c27e8a9747dba70</tag>
+    <tag>c1223b8d2478e83814db6327127cea0d9ab26ef5</tag>
   </scm>
   <build>
     <sourceDirectory>src/clj</sourceDirectory>
