--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <groupId>com.fluree</groupId>
   <artifactId>http.async.client</artifactId>
   <packaging>jar</packaging>
-  <version>1.3.1-22-0xe6cf</version>
+  <version>1.3.1-23-0x8d19d-DIRTY</version>
   <name>http.async.client</name>
   <description>Asynchronous HTTP Client for Clojure</description>
   <url>https://github.com/cch1/http.async.client</url>
@@ -19,7 +19,7 @@
     <url>https://github.com/cch1/http.async.client</url>
     <connection>scm:git:git://github.com/cch1/http.async.client.git</connection>
     <developerConnection>scm:git:ssh://git@github.com/cch1/http.async.client.git</developerConnection>
-    <tag>e6cfedd31ae03322cdf8a2a0aa45a4f2b8ebc8b7</tag>
+    <tag>8d19d78bbd3c4fe51da3caedaf66ac5aa75d41ee</tag>
   </scm>
   <build>
     <sourceDirectory>src/clj</sourceDirectory>
@@ -80,7 +80,7 @@
     <dependency>
       <groupId>org.clojure</groupId>
       <artifactId>tools.logging</artifactId>
-      <version>1.1.0</version>
+      <version>1.2.2</version>
     </dependency>
     <dependency>
       <groupId>org.eclipse.jetty</groupId>
@@ -115,7 +115,7 @@
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-log4j12</artifactId>
-      <version>1.7.12</version>
+      <version>1.7.32</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
