--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <groupId>com.fluree</groupId>
   <artifactId>http.async.client</artifactId>
   <packaging>jar</packaging>
-  <version>1.3.1-23-0x8d19d-DIRTY</version>
+  <version>1.3.1-24-0x8b28</version>
   <name>http.async.client</name>
   <description>Asynchronous HTTP Client for Clojure</description>
   <url>https://github.com/cch1/http.async.client</url>
@@ -19,7 +19,7 @@
     <url>https://github.com/cch1/http.async.client</url>
     <connection>scm:git:git://github.com/cch1/http.async.client.git</connection>
     <developerConnection>scm:git:ssh://git@github.com/cch1/http.async.client.git</developerConnection>
-    <tag>8d19d78bbd3c4fe51da3caedaf66ac5aa75d41ee</tag>
+    <tag>8b28997b07806edc0a31c9d433c25cef110d0459</tag>
   </scm>
   <build>
     <sourceDirectory>src/clj</sourceDirectory>
